<resources>
    <string name="app_name">Sri Exports</string>
    <string name="title">Order Management</string>
    <string name="approved_heading">Approved Orders</string>
    <string name="rejected_heading">Rejected Orders</string>
    <string name="approved_count">Loading..</string>
    <string name="rejected_count">Loading..</string>
    <string name="order_id">ID</string>
    <string name="order_title">Title</string>
    <string name="ship_country">Country</string>
    <string name="approve_btn">APPROVE</string>
    <string name="reject_btn">REJECT</string>
    <string name="ship_method">Air or Ship</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="approved_orders">Approved Orders</string>
    <string name="delete_btn">DELETE</string>
    <string name="rejected_orders">Rejected Orders</string>
    <string-array name="mode">
        <item></item>
        <item>Air</item>
        <item>Ship</item>
    </string-array>
    <!--    delivery-->
    <!--    <string name="app_name">MadMiniProject</string>-->
    <string name="tv_bgn">Join with us better Online shopping</string>
    <string name="btn_start">Get Started</string>
    <string name="btn_login">Login</string>
    <string name="tv_acc">Don\'t have an account?</string>
    <string name="tv_signup">SignUp</string>
    <string name="btn_adminlg">Admin login</string>
    <string name="tv_delivery">Delivery</string>
    <string name="btn_approved">Approved Orders</string>
    <string name="btn_add_delivery">+ Add Delivery</string>
    <string name="btn_all_delivery">All Deliverys</string>
    <string name="icon_back" />
    <string name="icon_menu" />
    <string name="tv_add_delivery">Add Delivery</string>
    <string name="tv_product_name">Order ID</string>
    <string name="tv_address">Address</string>
    <string name="tv_delivery_date">Delivery Date</string>
    <string name="tv_status">Type</string>
    <string name="spn_status" />
    <string name="btn_add">Add</string>
    <string name="tv_update_delivery">Update Delivery</string>
    <string name="btn_update">update</string>
    <string name="tv_delete_delivery">Delete Delivery</string>
    <string name="btn_delete">delete</string>
    <string name="tv_delivery_details">Delivery Details</string>
    <string name="select_delivery_type">Select delivery type</string>
    <string-array name="delivery_types">
        <item></item>
        <item>Air</item>
        <item>Ship</item>
    </string-array>

    <!--    user-->
    <string name="tv_begin">Share your products with the world!</string>
    <string name="tv_create">Create Account</string>
    <string name="btn_create">Create Account</string>
    <string name="tv_loginopt">Already have an account? Login</string>
    <string name="tv_hello">Hello, User!</string>
    <string name="btn_naviAddOrder">Add Order</string>
    <string name="btn_naviViewOrders">View Orders</string>
    <string name="tv_currency">Currency Rates</string>
    <string name="tv_country">Country</string>
    <string name="tv_exrate">Exchange Rate</string>
    <string name="tv_addOrder">Add Order</string>
    <string name="btn_submit">Submit Order</string>
    <string name="tv_delOrder">Delete Order</string>
    <string name="btn_delOrder">Delete Order</string>
    <string name="tv_updateOrder">Update Order</string>
    <string name="btn_updateOrder">Update Order</string>
    <string name="tv_orderList">Your Orders</string>
    <string name="tv_orderID">Order ID</string>
    <string name="tv_profile">Profile</string>
    <string name="tv_username">Username</string>
    <string name="tv_viewProfile">Show Profile</string>
    <string name="tv_personalinfo">Personal Information</string>
    <string name="tv_security">Login and security</string>
    <string name="tv_help">Get Help</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_notification">Notifications</string>
    <string name="tv_privacy">Privacy and sharing</string>
    <string name="tv_terms">Terms and conditions</string>
    <string name="btn_orderID">Logout</string>

    <!--inventory-->
    <string name="customer_id">Customer ID</string>
    <string name="customer_name">Customer Name</string>
    <string name="item">Item</string>
    <string name="view_all_items">View all Items</string>
    <string name="add_new_item">Add New Item</string>
    <string name="update_item">Update Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="quantity">Quantity</string>
    <string name="country">Country</string>
    <string name="submit">Submit</string>
</resources>