<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inventorymanagement.activities.InventoryMain">

    <Button
        android:id="@+id/viewAllItemBtn"
        android:layout_width="167dp"
        android:layout_height="93dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/deleteMarginTop"
        android:backgroundTint="@color/lblue"
        android:text="@string/view_all_items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewItemBtn" />

    <Button
        android:id="@+id/addNewItemBtn"
        android:layout_width="167dp"
        android:layout_height="93dp"
        android:layout_marginTop="@dimen/addValueMarginTop"
        android:backgroundTint="@color/lblue"
        android:text="@string/add_new_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/updateItemBtn"
        android:layout_width="167dp"
        android:layout_height="93dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:text="@string/update_item"
        android:backgroundTint="@color/lblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/deleteItemBtn"
        android:layout_width="167dp"
        android:layout_height="93dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:text="@string/delete_item"
        android:backgroundTint="@color/lblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateItemBtn" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="322dp"
        android:layout_height="323dp"
        android:layout_marginTop="@dimen/logoMarginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>