<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".deliverymangement.activity.UpdateDeliveryActivity">

    <Button
        android:id="@+id/btn_update"
        android:layout_width="273dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="sans-serif-condensed-medium"
        android:shadowRadius="50"
        android:text="@string/btn_update"
        android:textColor="#FEFEFE"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_update_delivery_type" />

    <Spinner
        android:id="@+id/sp_update_delivery_type"
        android:layout_width="340dp"
        android:layout_height="27dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:entries="@array/delivery_types"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tv_status"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_delivery_date" />

    <EditText
        android:id="@+id/tv_update_product_name"
        android:layout_width="340dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/orderbox"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/tv_product_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_delivery" />

    <EditText
        android:id="@+id/tv_update_address"
        android:layout_width="340dp"
        android:layout_height="51dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/orderbox"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/tv_address"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_product_name" />

    <EditText
        android:id="@+id/tv_update_delivery_date"
        android:layout_width="340dp"
        android:layout_height="51dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/orderbox"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/tv_delivery_date"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_address" />

    <TextView
        android:id="@+id/tv_update_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tv_update_delivery"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>