<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".deliverymangement.activity.AddDeliveryActivity">

    <Button
        android:id="@+id/btn_add"
        android:layout_width="273dp"
        android:layout_height="75dp"
        android:layout_marginTop="@dimen/btn_start_mgTop"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="sans-serif-condensed-medium"
        android:shadowRadius="50"
        android:text="@string/btn_add"
        android:textColor="#FEFEFE"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_status" />

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="415dp"
        android:layout_height="58dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_add_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_header"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tv_add_delivery"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header" />

    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_header"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:onClick="navigateback" />

    <ImageView
        android:id="@+id/icon_menu"
        android:layout_width="41dp"
        android:layout_height="37dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_header"
        app:srcCompat="@drawable/baseline_menu_24" />

    <EditText
        android:id="@+id/tv_product_name"
        android:layout_width="340dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/orderbox"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/tv_product_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_delivery" />

    <EditText
        android:id="@+id/tv_address"
        android:layout_width="340dp"
        android:layout_height="51dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/orderbox"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/tv_address"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

    <EditText
        android:id="@+id/tv_delivery_date"
        android:layout_width="340dp"
        android:layout_height="51dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/orderbox"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/tv_delivery_date"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tv_status"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_delivery_date" />

    <Spinner
        android:id="@+id/spn_status"
        android:layout_width="340dp"
        android:layout_height="27dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status" />

</androidx.constraintlayout.widget.ConstraintLayout>