<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryDashboardActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="415dp"
        android:layout_height="58dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_marginTop="@dimen/Menu_Icon_mgnTop"
        android:layout_marginEnd="@dimen/Menu_Icon_mgnEnd"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:srcCompat="@drawable/baseline_menu_24" />

    <TextView
        android:id="@+id/tv_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_header"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tv_delivery"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_approved"
        android:layout_width="330dp"
        android:layout_height="151dp"
        android:layout_marginTop="@dimen/btn_login_mgTop"
        android:background="@drawable/bg_round"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/btn_approved"
        android:textColor="#F9F9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_delivery" />

    <Button
        android:id="@+id/btn_add_delivery"
        android:layout_width="330dp"
        android:layout_height="151dp"
        android:layout_marginTop="@dimen/btn_daashboard_mgnTop"
        android:background="@drawable/bg_round"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/btn_add_delivery"
        android:textColor="#F9F9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_approved" />

    <Button
        android:id="@+id/btn_all_delivery"
        android:layout_width="330dp"
        android:layout_height="151dp"
        android:layout_marginTop="@dimen/btn_daashboard_mgnTop"
        android:background="@drawable/bg_round"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/btn_all_delivery"
        android:textColor="#F9F9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_delivery" />

</androidx.constraintlayout.widget.ConstraintLayout>